--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Lviv music room</title>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/util.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -16,13 +14,13 @@
 
     <main>
         <header>
-            <nav class="fixed-top navbar navbar-expand-md navbar-dark bg-transparent">
+            <nav class="fixed-top navbar navbar-expand-never navbar-dark bg-transparent justify-content-end">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
+                        <li class="nav-item float-right">
                             <a class="nav-link" href="#home">HOME</a>
                         </li>
                         <li class="nav-item">
@@ -41,12 +39,6 @@
                             <a class="nav-link" href="#contacts">CONTACTS</a>
                         </li>
                     </ul>
-                    <div>
-                        <a class="nav-link openCartLink" href="#modal-cart" data-toggle="modal">
-                            <i class="fas fa-shopping-cart"></i> Cart
-                            <span id="cart-badge" class="badge badge-light"></span>
-                        </a>
-                    </div>
                 </div>
             </nav>
             <div>
@@ -96,7 +88,7 @@
             </div>
 
         </div>
-        <div>
+        <section>
             <article class="chapters">
                 <h2 id="announce">COMING SOON</h2>
             </article>
@@ -106,7 +98,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Event</h5>
                         <p class="card-text">new event info</p>
-                        <a href="#" class="btn btn-primary">BOOK NOW</a>
+                        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">BOOK NOW</a>
                     </div>
                 </div>
                 <div class="card col-12 col-sm-6 col-md-5 col-lg-4 bg-transparent">
@@ -114,7 +106,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Event</h5>
                         <p class="card-text">new event info</p>
-                        <a href="#" class="btn btn-primary">BOOK NOW</a>
+                        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">BOOK NOW</a>
                     </div>
                 </div>
                 <div class="card col-12 col-sm-6 col-md-5 col-lg-4 bg-transparent">
@@ -122,7 +114,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Event</h5>
                         <p class="card-text">new event info</p>
-                        <a href="#" class="btn btn-primary">BOOK NOW</a>
+                        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">BOOK NOW</a>
                     </div>
                 </div>
                 <div class="card col-12 col-sm-6 col-md-5 col-lg-4 bg-transparent">
@@ -130,7 +122,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Event</h5>
                         <p class="card-text">new event info</p>
-                        <a href="#" class="btn btn-primary">BOOK NOW</a>
+                        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">BOOK NOW</a>
                     </div>
                 </div>
                 <div class="card col-12 col-sm-6 col-md-5 col-lg-4 bg-transparent">
@@ -138,7 +130,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Event</h5>
                         <p class="card-text">new event info</p>
-                        <a href="#" class="btn btn-primary">BOOK NOW</a>
+                        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">BOOK NOW</a>
                     </div>
                 </div>
                 <div class="card col-12 col-sm-6 col-md-5 col-lg-4 bg-transparent">
@@ -146,12 +138,11 @@
                     <div class="card-body">
                         <h5 class="card-title">Event</h5>
                         <p class="card-text">new event info</p>
-                        <a href="#" class="btn btn-primary">BOOK NOW</a>
+                        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">BOOK NOW</a>
                     </div>
                 </div>
             </div>
-        </div>
-        <div>
+        </section>
             <article class="chapters">
                 <h2 id="previous">WATCH PREVIOUS</h2>
             </article>
@@ -298,10 +289,52 @@
             <p>/2020</p>
         </div>
     </main>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js " integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN " crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js " integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV " crossorigin="anonymous "></script>
-</body>
+
+    <div class="modal fade" id="productInfoModal" tabindex="-1" role="dialog" aria-labelledby="productInfoLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="productInfoLabel">New event info</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+              <img class="card-img-top" src="img/announce.jpg" alt="announce">
+              <h4 class="card-title"></h4>
+              <p class="card-text">Next event info</p>
+            <form class="login-form">
+            <label>
+                Name: <input type="text" name="name">
+            </label>
+            <br>
+            <label>
+                e-mail: <input type="e-mail" name="e-mail">
+            </label>
+             <label>
+                tel: <input type="tel" name="tel">
+            </label>
+            <br>
+            <input type="submit">
+        </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary btn-close" data-dismiss="modal">CLOSE</button>
+            <button class="btn btn-primary buy" data-id="id">BOOK</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
+
+
+    <script async src="js/alert-window.js"></script>
+    <script defer src="js/index.js"></script></body>
 
 
 
