--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
 
             <div class="container">
                 <div class="contact-links">
-                    <a href="https://facebook.com/"><img class="contact-img" src="img/social-media/fb.jpg " alt="Facebook"></a>
-                    <a href="https://instagram.com/"><img class="contact-img" src="img/social-media/instajpg.jpg " alt="instagram"></a>
-                    <a href="https://www.youtube.com/"><img class="contact-img" src="img/social-media/youtube.jpg " alt="youtube"></a>
+                    <a href="https://www.facebook.com/lvivmusicroom/" target="_blank"><img class="contact-img" src="img/social-media/fb.jpg " alt="Facebook"></a>
+                    <a href="https://www.instagram.com/lvivmusicroom/" target="_blank"><img class="contact-img" src="img/social-media/instajpg.jpg " alt="instagram"></a>
+                    <a href="https://www.youtube.com/lvivmusicroom/" target="_blank"><img class="contact-img" src="img/social-media/youtube.jpg " alt="youtube"></a>
                     <a href="#"><img class="contact-img" src="img/social-media/call us.png " alt="call us"></a>
                 </div>
             </div>
