--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item float-right">
-                            <a class="nav-link" href="#home">HOME</a>
+                            <a class="nav-link float-right" href="#home" onclick="hideCollapseMenu()">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">ABOUT</a>
+                            <a class="nav-link float-right" href="#about" onclick="hideCollapseMenu()">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#announce">ANNOUNCE</a>
+                            <a class="nav-link float-right" href="#announce" onclick="hideCollapseMenu()">ANNOUNCE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#previous">PREVIOUS</a>
+                            <a class="nav-link float-right" href="#previous" onclick="hideCollapseMenu()">PREVIOUS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#partners">PARTNERS</a>
+                            <a class="nav-link float-right" href="#partners" onclick="hideCollapseMenu()">PARTNERS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contacts">CONTACTS</a>
+                            <a class="nav-link float-right" href="#contacts" onclick="hideCollapseMenu()">CONTACTS</a>
                         </li>
                     </ul>
                 </div>
@@ -149,56 +149,56 @@
             <div class="row justify-content-center">
                 <div class="card  col-lg-5 bg-transparent" style="width: 18rem;">
                     <div class="card-body">
-                        <iframe class="youtube" src="https://www.youtube.com/embed/34D9Sjmdc60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="youtube" src="https://www.youtube.com/embed/34D9Sjmdc60" target="_blank" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h5 class="card-title">Panchyshyn</h5>
                         <h6 class="card-subtitle mb-2 text-muted">August 10 2020</h6>
                     </div>
                 </div>
                 <div class="card  col-lg-5 bg-transparent" style="width: 18rem;">
                     <div class="card-body">
-                        <iframe class="youtube" src="https://www.youtube.com/embed/0_ZQkZej-78" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="youtube" src="https://www.youtube.com/embed/0_ZQkZej-78" target="_blank" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h5 class="card-title">Lemko Bluegrass Band</h5>
                         <h6 class="card-subtitle mb-2 text-muted">July 26 2020</h6>
                     </div>
                 </div>
                 <div class="card  col-lg-5 bg-transparent" style="width: 18rem;">
                     <div class="card-body card-youtube">
-                        <iframe class="youtube" src="https://www.youtube.com/embed/WNiFrXa6XbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="youtube" src="https://www.youtube.com/embed/WNiFrXa6XbA" target="_blank" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h5 class="card-title">Nash Skoryk</h5>
                         <h6 class="card-subtitle mb-2 text-muted">July 19 2020</h6>
                     </div>
                 </div>
                 <div class="card  col-lg-5 bg-transparent" style="width: 18rem;">
                     <div class="card-body">
-                        <iframe class="youtube" src="https://www.youtube.com/embed/G_RnX5xwF9E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="youtube" src="https://www.youtube.com/embed/G_RnX5xwF9E" target="_blank" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h5 class="card-title">Oksana Muha & Joryj Kloc</h5>
                         <h6 class="card-subtitle mb-2 text-muted">July 7 2020</h6>
                     </div>
                 </div>
                 <div class="card col-lg-5 bg-transparent" style="width: 18rem;">
                     <div class="card-body">
-                        <iframe class="youtube" src="https://www.youtube.com/embed/zb_49SYDVjY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="youtube" src="https://www.youtube.com/embed/zb_49SYDVjY" target="_blank" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h5 class="card-title">Pikkardiyska Tercia</h5>
                         <h6 class="card-subtitle mb-2 text-muted">June 28 2020</h6>
                     </div>
                 </div>
                 <div class="card  col-lg-5 bg-transparent" style="width: 18rem;">
                     <div class="card-body">
-                        <iframe class="youtube" src="https://www.youtube.com/embed/nhLTZ27ZYik" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="youtube" src="https://www.youtube.com/embed/nhLTZ27ZYik" target="_blank" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h5 class="card-title">Trioda</h5>
                         <h6 class="card-subtitle mb-2 text-muted">June 21 2020</h6>
                     </div>
                 </div>
                 <div class="card  col-lg-5 bg-transparent" style="width: 18rem;">
                     <div class="card-body">
-                        <iframe class="youtube" src="https://www.youtube.com/embed/zLRDQdKMhgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="youtube" src="https://www.youtube.com/embed/zLRDQdKMhgU" target="_blank" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h5 class="card-title">Nashe Krashche!</h5>
                         <h6 class="card-subtitle mb-2 text-muted">June 3 2020</h6>
                     </div>
                 </div>
                 <div class="card  col-lg-5 bg-transparent" style="width: 18rem;">
                     <div class="card-body">
-                        <iframe class="youtube" src="https://www.youtube.com/embed/O_GVS7I2Wbs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="youtube" src="https://www.youtube.com/embed/O_GVS7I2Wbs" target="_blank" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h5 class="card-title">Wshystko</h5>
                         <h6 class="card-subtitle mb-2 text-muted">May 30 2020</h6>
                     </div>
@@ -285,8 +285,9 @@
 
         </footer>
         <div class="dev-link">
-            <a href="#">Andrew Butenko</a>
-            <p>/2020</p>
+            <a href="https://www.facebook.com/andrew.butenko1/">Andrew Butenko</a>
+            <p>_/2020/_</p>
+            <a href="https://www.linkedin.com/in/andrew-butenko-96b050a8/">LinkedIn</a>
         </div>
     </main>
 
@@ -304,23 +305,25 @@
               <h4 class="card-title"></h4>
               <p class="card-text">Next event info</p>
             <form class="login-form">
-            <label>
-                Name: <input type="text" name="name">
-            </label>
-            <br>
-            <label>
-                e-mail: <input type="e-mail" name="e-mail">
-            </label>
-             <label>
-                tel: <input type="tel" name="tel">
-            </label>
-            <br>
-            <input type="submit">
-        </form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Name</label>
+    <input type="name" class="form-control" id="exampleInputName1">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">E-mail</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Tel</label>
+    <input type="tel" class="form-control" id="exampleInputTel1">
+  </div>
+</form>
+
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary btn-close" data-dismiss="modal">CLOSE</button>
-            <button class="btn btn-primary buy" data-id="id">BOOK</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </div>
       </div>
